Fix centering issue on small screen

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,3 +24,25 @@
   .text-left-responsive {text-align:left;}
 }  
 
+@media only screen and (max-width: 500px) {
+	.text-right-responsive {text-align:center;}
+	.text-left-responsive {text-align:center;}
+}
+
+.btn-mysubmit{
+	background: none;
+	border: none;
+	border-bottom: solid #fff 1pt;
+	border-radius: 0;
+	padding-bottom: 3px;
+	padding-top: 3px;
+	color: #757575;
+	font-family: 'Open Sans';
+	letter-spacing: .65px;
+	text-transform: uppercase;
+}
+
+.btn-mysubmit:hover{
+	color: #333;
+	border-bottom: solid #333 1pt;
+}
